--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,11 @@ mydata = "mydata.cli:app"
 requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["mydata*"]
+exclude = ["claude_tools*"]
+
 [tool.black]
 line-length = 100
 target-version = ['py311']
